[gd_scene load_steps=2 format=3 uid="uid://c8x7y0q5n3j4w"]

[ext_resource type="Script" uid="uid://cbshc3l6hhfii" path="res://src/ui/screens/campaign/phases/StoryPhasePanel.gd" id="1_y4r2p"]

[node name="StoryPhasePanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y4r2p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Story Phase"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="EventList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
auto_height = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="EventDetails" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Select a story event"
fit_content = true

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ChoiceContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ResolveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "Resolve Event"
